Loading button alignment corrected. Sort option added.

--- a/src/app/components/loading-button/loading-button.component.css
+++ b/src/app/components/loading-button/loading-button.component.css
@@ -1,5 +1,5 @@
 button {
-  vertical-align: middle;
+  vertical-align: top;
 }
 
 mat-progress-spinner {
